force-app/main/default/objects/Krow__Trigger_Settings__c/Krow__Trigger_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Manages various trigger/automated process.</description>
    <label>Klient Trigger Settings</label>
</CustomObject>