force-app/main/default/objects/Krow__Trigger_Settings__c/fields/Krow__Disable_Default_Task_Owner_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Default_Task_Owner_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Default Task Owner Assignment</label>
    <type>Checkbox</type>
</CustomField>