force-app/main/default/objects/Krow__Trigger_Settings__c/fields/Krow__Disable_Krow_Task_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Krow_Task_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Klient Task Trigger</label>
    <type>Checkbox</type>
</CustomField>