force-app/main/default/objects/Krow__Trigger_Settings__c/fields/Krow__Disable_Resource_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Resource_Utilization__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, it will skip the Resource Utilization Calculation on each transaction(eg. insert/update of timesheet split, timeoff, task assignment schedule etc.).</description>
    <label>Disable Resource Utilization</label>
    <type>Checkbox</type>
</CustomField>