force-app/main/default/objects/Krow__Trigger_Settings__c/fields/Krow__Disable_Section_Change_on_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Section_Change_on_Status_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Section Change on Status Change</label>
    <type>Checkbox</type>
</CustomField>