force-app/main/default/objects/Krow__Trigger_Settings__c/fields/Krow__Disable_Task_Assignment_If_Unassigned__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Task_Assignment_If_Unassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Task Assignment If Unassigned</label>
    <type>Checkbox</type>
</CustomField>