force-app/main/default/objects/Krow__Trigger_Settings__c/fields/Krow__Disable_Task_Auto_Completion__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Task_Auto_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Task Auto-Completion</label>
    <type>Checkbox</type>
</CustomField>