force-app/main/default/objects/Krow__Trigger_Settings__c/fields/Krow__Disable_Timesheet_Rollups__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Timesheet_Rollups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked timesheet cost/amount details will not be rollup on project and task after each save/update, instead a scheduled job will rollup these details (need to schedule &apos;SystemMaintenanceJob&apos; manually).</description>
    <inlineHelpText>If checked timesheet cost/amount details will not be rollup on project and task after each save/update, instead a scheduled job will rollup these details (need to schedule &apos;SystemMaintenanceJob&apos; manually).</inlineHelpText>
    <label>Disable Timesheet Rollups</label>
    <type>Checkbox</type>
</CustomField>