force-app/main/default/objects/Krow__Trigger_Settings__c/fields/Krow__Disable_Timesheet_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Timesheet_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to stop triggers on timesheet master and its childs.</description>
    <label>Disable Timesheet Trigger</label>
    <type>Checkbox</type>
</CustomField>