force-app/main/default/objects/Krow__Trigger_Settings__c/fields/Krow__Enable_Logging__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>